--- a/cheatsheets/variables/variables.html
+++ b/cheatsheets/variables/variables.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Variables in C programming</title>
+    <title>Variables</title>
     <link rel="stylesheet" type="text/css" href="./style_var.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
