--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -12,6 +12,12 @@
   <body>
     <div style="display: flex;">
         <div style="flex: 1; padding: 10px;">
+            <h1>Datatypes</h1>
+            <blockquote>
+                An attribute that identifies a piece of 
+                data and instructs a computer system on 
+                how to interpret its value is called a data type.
+            </blockquote>
             </div>
             
                 <div style="flex: 1; padding: 10px;">
