modified:   cheatsheets/datatypes/datatypes.html

--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -18,6 +18,13 @@
                 data and instructs a computer system on 
                 how to interpret its value is called a data type.
             </blockquote>
+
+            <h2>Common datatypes in programming:</h2>
+            <ol>
+                <li>Primitive Datatypes</li>
+                <li>Composite Datatypes</li>
+                <li>User-defined Datatypes</li>
+            </ol>
             </div>
             
                 <div style="flex: 1; padding: 10px;">
