modified:   cheatsheets/datatypes/datatypes.html

--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -25,7 +25,27 @@
                 <li>Composite Datatypes</li>
                 <li>User-defined Datatypes</li>
             </ol>
+
+            <b>1. Primitive datatypes:</b><br/>
+            <p>Primitives are the simplest data types 
+                available in a programming language, 
+                like numbers or text. They serve as the 
+                building blocks for more complex data types. 
+                Every programming language has some form of 
+                these basic types to handle simple values.</p>
             </div>
+
+            <b>2. Composite Datatypes:</b><br/>
+            <p>Composite data types are made up of two or more 
+                primitive data types. They allow us to group 
+                different pieces of data together, like a contact 
+                with a name and phone number.</p>
+
+                <b>3. User-defined datatypes:</b><br/>
+                <p>User-defined data types are custom data types that programmers 
+                    create to represent more complex data. They are tailored to 
+                    fit the specific needs of the program, like defining a ‘Car’ 
+                    with properties like color and model.</p>
             
                 <div style="flex: 1; padding: 10px;">
                     </div>
