--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -11,7 +11,7 @@
 
   <body>
     <div style="display: flex;">
-        <div style="flex: 1; padding: 10px;">
+        < style="flex: 1; padding: 10px;">
             <h1>Datatypes</h1>
             <blockquote>
                 An attribute that identifies a piece of 
@@ -33,7 +33,7 @@
                 building blocks for more complex data types. 
                 Every programming language has some form of 
                 these basic types to handle simple values.</p>
-            </div>
+            
 
             <b>2. Composite Datatypes:</b><br/>
             <p>Composite data types are made up of two or more 
@@ -46,7 +46,7 @@
                     create to represent more complex data. They are tailored to 
                     fit the specific needs of the program, like defining a ‘Car’ 
                     with properties like color and model.</p>
-            
+                </div>
                 <div style="flex: 1; padding: 10px;">
                     </div>
     </body>
