--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -11,7 +11,7 @@
 
   <body>
     <div style="display: flex;">
-        < style="flex: 1; padding: 10px;">
+        <div style="flex: 1; padding: 10px;">
             <h1>Datatypes</h1>
             <blockquote>
                 An attribute that identifies a piece of 
