modified:   cheatsheets/datatypes/datatypes.html

--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -48,6 +48,62 @@
                     with properties like color and model.</p>
                 </div>
                 <div style="flex: 1; padding: 10px;">
+                    <table><thead>
+                        <tr>
+                          <th>Datatype/Language</th>
+                          <th>Primitive Datatypes</th>
+                          <th>Composite Datatypes</th>
+                          <th>User-Defined Datatypes</th>
+                        </tr></thead>
+                      <tbody>
+                        <tr>
+                          <td>C Programming</td>
+                          <td>
+                            <ul>
+                                <li>int</li>
+                                <li>char</li>
+                                <li>float</li>
+                                <li>double</li>
+                                <li>_Bool</li>
+                                <li>void</li>
+                            </ul>
+                          </td>
+                          <td></td>
+                          <td></td>
+                        </tr>
+                        <tr>
+                          <td>Java</td>
+                          <td>
+                            <ul>
+                                <li>int</li>
+                                <li>char</li>
+                                <li>float</li>
+                                <li>double</li>
+                                <li>boolean</li>
+                                <li>short</li>
+                                <li>long</li>
+                                <li>byte</li>
+                            </ul>
+                          </td>
+                          <td></td>
+                          <td></td>
+                        </tr>
+                        <tr>
+                          <td>Python</td>
+                          <td>
+                            <ul>
+                                <li>int</li>
+                                <li>str</li>
+                                <li>float</li>
+                                <li>bool</li>
+                            </ul>
+                          </td>
+                          <td></td>
+                          <td></td>
+                        </tr>
+                      </tbody>
+                      </table>
+   
                     </div>
     </body>
     </html>
