modified:   cheatsheets/datatypes/datatypes.html

--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -68,7 +68,14 @@
                                 <li>void</li>
                             </ul>
                           </td>
-                          <td></td>
+                          <td>
+                            <ul>
+                                <li>array</li>
+                                <li>struct</li>
+                                <li>union</li>
+                                <li>enum</li>
+                            </ul>
+                          </td>
                           <td></td>
                         </tr>
                         <tr>
@@ -85,7 +92,15 @@
                                 <li>byte</li>
                             </ul>
                           </td>
-                          <td></td>
+                          <td>
+                            <ul>
+                                <li>class</li>
+                                <li>array</li>
+                                <li>enum</li>
+                                <li>String</li>
+                                <li>ArrayList</li>
+                            </ul>
+                          </td>
                           <td></td>
                         </tr>
                         <tr>
@@ -98,7 +113,14 @@
                                 <li>bool</li>
                             </ul>
                           </td>
-                          <td></td>
+                          <td>
+                            <ul>
+                                <li>list</li>
+                                <li>tuple</li>
+                                <li>dict</li>
+                                <li>set</li>
+                            </ul>
+                          </td>
                           <td></td>
                         </tr>
                       </tbody>
