modified:   cheatsheets/datatypes/datatypes.html

--- a/cheatsheets/datatypes/datatypes.html
+++ b/cheatsheets/datatypes/datatypes.html
@@ -76,7 +76,14 @@
                                 <li>enum</li>
                             </ul>
                           </td>
-                          <td></td>
+                          <td>
+                            <ul>
+                                <li>struct</li>
+                                <li>union</li>
+                                <li>enum</li>
+                                <li>typedef</li>
+                            </ul>
+                          </td>
                         </tr>
                         <tr>
                           <td>Java</td>
@@ -101,7 +108,13 @@
                                 <li>ArrayList</li>
                             </ul>
                           </td>
-                          <td></td>
+                          <td>
+                            <ul>
+                                <li>class</li>
+                                <li>interface</li>
+                                <li>enum</li>
+                            </ul>
+                          </td>
                         </tr>
                         <tr>
                           <td>Python</td>
@@ -121,7 +134,12 @@
                                 <li>set</li>
                             </ul>
                           </td>
-                          <td></td>
+                          <td>
+                            <ul>
+                                <li>class</li>
+                                <li>custom exceptions</li>
+                            </ul>
+                          </td>
                         </tr>
                       </tbody>
                       </table>
