new file:   style.css

--- a/cheatsheets/input_output/inout.html
+++ b/cheatsheets/input_output/inout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Datatypes</title>
-    <link rel="stylesheet" type="text/css" href="./style_data.css">
+    <link rel="stylesheet" type="text/css" href="./style_inout.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
   <body>
