--- a/cheatsheets/HTML/variables.html
+++ b/cheatsheets/HTML/variables.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Variables in C programming</title>
-    <link rel="stylesheet" type="text/css" href="./style_var.css">
+    <title>Variables</title>
+    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style_var.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
 
