--- a/cheatsheets/HTML/inout.html
+++ b/cheatsheets/HTML/inout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Datatypes</title>
+    <title>Input and Output</title>
     <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style.css">
     <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style_inout.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
