--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Programming Cheatsheets</title>
+    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style.css">
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
+  </head>
+
+  <body>
+
+    <h1>The programming cheatsheets for C, Java and python.</h1>
+    <p>Collected from different online sources, this site provides a
+        brief comparison of some basic concepts in c, java and python.
+    </p>
+
+    <ul>
+        <li><a href="./cheatsheets/HTML/variables.html">Variables</a></li>
+        <li><a href="./cheatsheets/HTML/datatypes.html">Datatypes</a></li>
+        <li><a href="./cheatsheets/HTML/inout.html">Input and Output</a></li>
+    </ul>
+</body>
+</html>
 
