modified:   index.html

--- a/HTML/variables.html
+++ b/HTML/variables.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Variables</title>
-    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style.css">
-    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style_var.css">
+    <link rel="stylesheet" type="text/css" href="/common/style.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/style_var.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
 
