--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Programming Cheatsheets</title>
-    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="/common/style.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
 
@@ -17,9 +17,9 @@
     </p>
 
     <ul>
-        <li><a href="./cheatsheets/HTML/variables.html">Variables</a></li>
-        <li><a href="./cheatsheets/HTML/datatypes.html">Datatypes</a></li>
-        <li><a href="./cheatsheets/HTML/inout.html">Input and Output</a></li>
+        <li><a href="./HTML/variables.html">Variables</a></li>
+        <li><a href="./HTML/datatypes.html">Datatypes</a></li>
+        <li><a href="./HTML/inout.html">Input and Output</a></li>
     </ul>
 </body>
 </html>
