--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Input and Output</title>
-    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style.css">
-    <link rel="stylesheet" type="text/css" href="/cheatsheets/CSS/style_inout.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/style_inout.css">
+    <link rel="stylesheet" type="text/css" href="/common/style.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
   <body>
