--- a/HTML/oops.html
+++ b/HTML/oops.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Input and Output</title>
+    <link rel="stylesheet" type="text/css" href="/CSS/style_inout.css">
+    <link rel="stylesheet" type="text/css" href="/common/style.css">
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
+  </head>
+
+  <body>
+    <div style="display: flex;">
+        <div style="flex: 1; padding: 10px;">
+    <h1>Object Oriented Programming</h1>
+    <p>The main features of object oriented programming are:</p>
+    <ul>
+        <li>Class and Object</li>
+        <li>Abstraction</li>
+        <li>Encapsulation</li>
+        <li>Polymorphism</li>
+        <li>Inheritance</li>
+    </ul>
+
+    <b>1. Class and Object:</b><br>
+    <p>Any entity that has state and behavior is known 
+        as an object. For example, Xiaomi, Motorola,
+        Samsung,Apple etc. It can be physical or logical.</p>
+
+    <p>The collection of objects is called a class.
+        The objects having similar properties are grouped 
+        under a class. Eg: Mobile Phone
+    </p>
+
+    <b>2. Abstraction:</b><br/>
+    <p>Hiding Internal details and showing only what is necessary is called 
+        abstraction.
+    </p>
+
+    <b>3. Encapsulation:</b><br/>
+    <p>Binding class and data together is called encapsulation.
+        A class is an example of encapsulation, if all the data
+        members in the class are private.
+    </p>
+
+    <b>4. Polymorphism:</b><br/>
+    <p>Doing same thing in different ways is called polymorphism.
+        It can be achieved by method overriding or method overloading.
+    </p>
+
+    <b>5. Inheritance:</b><br/>
+    <p>When one object acquires the properties of another
+        object, it is known as inheritance. The former is called
+        child object and latter is called parent object.
+    </p>
+
+    </div>
+
+    <div style="flex: 1; padding: 10px;">
+        
+    </div>
+  </body>
+</html>
