--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="./HTML/variables.html">Variables</a></li>
         <li><a href="./HTML/datatypes.html">Datatypes</a></li>
         <li><a href="./HTML/inout.html">Input and Output</a></li>
+        <li><a href="./HTML/oops.html">Object-Oriented Programming</a></li>
     </ul>
 </body>
 </html>
