--- a/HTML/oops.html
+++ b/HTML/oops.html
@@ -61,7 +61,7 @@
 
     </div>
 
-    <div style="flex: 1; padding: 10px;">
+    <div style="flex: 1">
       <h2>Class and object:</h2>
       <b>Syntax:</b>
       <md-block>
