modified:   HTML/oops.html

--- a/HTML/oops.html
+++ b/HTML/oops.html
@@ -119,7 +119,7 @@
                 </md-block>
             </td>
 
-            <td>
+            <td align="left">
                 <md-block>
                     ```python
                     class Vehicle:
