--- a/HTML/oops.html
+++ b/HTML/oops.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Object Oriented Programming</title>
-    <link rel="stylesheet" type="text/css" href="/CSS/style_inout.css">
-    <link rel="stylesheet" type="text/css" href="/common/style.css">
+    <link rel="stylesheet" type="text/css" href="/PROGRAMMING_NOTES/CSS/style_inout.css">
+    <link rel="stylesheet" type="text/css" href="/PROGRAMMING_NOTES/common/style.css">
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
 
