--- a/HTML/oops.html
+++ b/HTML/oops.html
@@ -12,7 +12,6 @@
 
   <body>
     <div style="display: flex;">
-        <div style="flex: 1; padding: 10px;">
     <h1>Object Oriented Programming</h1>
     <p>The main features of object oriented programming are:</p>
     <ul>
@@ -59,9 +58,7 @@
         It does not support classes and objects.
     </p>
 
-    </div>
-
-    <div style="flex: 1">
+    
       <h2>Class and object:</h2>
       <b>Syntax:</b>
       <md-block>
@@ -87,36 +84,58 @@
       </md-block>
 
       <b>Coding examples:</b><br/>
-      <md-block>
-| Java | Python |
-| :---: | :---: |
-| ```java | ```python |
-| public class Vehicle{ | class Vehicle: |
-|     static String color; |     def __init__(self, color, speed, type): |
-|     static int speed; |         self.color = color |
-|     static String type; |         self.speed = speed |
-|  |         self.type = type |
-|     public Vehicle(String color, int speed, String type){ |  |
-|         this.color = color; |     def setColor(self, newColor): |
-|         this.speed = speed; |         self.color = newColor |
-|         this.type = type; |      |
-|     } |     def getColor(self): |
-|  |         return self.color |
-|     public static void setColor(String newColor){ | ``` |
-|         color = newColor; |  |
-|     } |  |
-|  |  |
-|     public static String getColor(){ |  |
-|         return color; |  |
-|     } |  |
-| } |  |
-| ``` | ``` |
+      <table>
+        <tr>
+            <th>Java</th>
+            <th>Python</th>
+        </tr>
 
-</md-block>
+        <tr>
+            <td>
+                <md-block>
+                    ```java
+                    public class Vehicle{
+                        String color;
+                        Integer speed;
+                        String type;
 
+                        public Vehicle(String color,Integer speed,String type){
+                            this.color = color;
+                            this.speed = speed;
+                            this.type = type;
+                        }
 
+                        public void setColor(newColor){
+                            this.color = newColor;
+                        }
 
-        
+                        public String getColor(){
+                            return this.color;
+                        }
+                    }
+                    ```
+                </md-block>
+            </td>
+
+            <td>
+                <md-block>
+                    ```python
+                    class Vehicle:
+                        def __init__(self,speed,color,type):
+                            self.color = color
+                            self.speed = speed
+                            self.type = type
+
+                        def setColor(self,newColor):
+                            self.color = newColor
+
+                        def getColr(self):
+                            return self.color
+                    ```
+                </md-block>
+            </td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
