--- a/HTML/oops.html
+++ b/HTML/oops.html
@@ -83,7 +83,7 @@
       </md-block>
 
       <b>Coding examples:</b><br/>
-      <table>
+      <table align="center">
         <tr>
             <th>Java</th>
             <th>Python</th>
