modified:   HTML/oops.html

--- a/HTML/oops.html
+++ b/HTML/oops.html
@@ -57,10 +57,11 @@
         It does not support classes and objects.
     </p>
 
-    
+    <div align="center">
+    <h1>Syntax and coding examples:</h1>
       <h2>Class and object:</h2>
       <b>Syntax:</b>
-      <md-block>
+      <md-block align="center">
         ```pseudocode
         Define Class Vehicle
             Define Properties:
@@ -135,6 +136,7 @@
             </td>
         </tr>
       </table>
+      </div>
     
   </body>
 </html>
