modified:   HTML/inout.html

--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -23,6 +23,27 @@
                             user messages, file writing, etc.</li>
                 </ul> 
             </blockquote>
+
+            <b>Input methods in C:</b><br/>
+            <table>
+                <tr>
+                    <th>Method</th>
+                    <th>Description</th>
+                </tr>
+
+                <tr>
+                    <td>
+                        <md-block>
+                            ```c
+                            scanf()
+                            ```
+                        </md-block>
+                    </td>
+
+                    <td>
+                      <p>Used to read formatted input from the user.</p>  
+                    </td>
+                </tr>
             </div>
         <div style="flex: 1; padding: 10px;">
             </div>
