--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -24,7 +24,7 @@
                 </ul> 
             </blockquote>
 
-            <b>Input methods in C:</b><br/>
+            <h2>Input methods in C:</h2><br/>
             <table>
                 <tr>
                     <th>Method</th>
@@ -41,9 +41,39 @@
                     </td>
 
                     <td>
-                      <p>Used to read formatted input from the user.</p>  
+                      <p>Reads formatted input from the user.</p>  
                     </td>
                 </tr>
+
+                <tr>
+                    <td>
+                        <md-block>
+                            ```c
+                            getchar()
+                            ```
+                        </md-block>
+                    </td>
+
+                    <td>
+                      <p>Reads a character.</p>  
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <md-block>
+                            ```c
+                            putchar()
+                            ```
+                        </md-block>
+                    </td>
+
+                    <td>
+                      <p>Displays a character.</p>  
+                    </td>
+                </tr>
+
+                
             </div>
         <div style="flex: 1; padding: 10px;">
             </div>
