--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -73,7 +73,35 @@
                     </td>
                 </tr>
 
-                
+                <tr>
+                    <td>
+                        <md-block>
+                            ```c
+                            gets()
+                            ```
+                        </md-block>
+                    </td>
+
+                    <td>
+                      <p>Reads strings, is terminated by Enter key. Causes buffer overflow.</p>  
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <md-block>
+                            ```c
+                            puts()
+                            ```
+                        </md-block>
+                    </td>
+
+                    <td>
+                      <p>Displays strings, is terminated by Enter key. </p>  
+                    </td>
+                </tr>
+
+
             </div>
         <div style="flex: 1; padding: 10px;">
             </div>
