--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -104,6 +104,14 @@
 
             </div>
         <div style="flex: 1; padding: 10px;">
+            <h1>Syntax and Coding examples:</h1>
+            <h2>Input methods in C:</h2>
+            <h3>scanf:</h3>
+            <md-block>
+                ```c
+                #include &ltstdio.h&gt;
+                ```
+            </md-block>
             </div>
 
   </body>
