--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -25,7 +25,7 @@
                         user messages, file writing, etc.</li>
                 </ul>
             </blockquote>
-
+            <br/>
             <h2>Input methods in C:</h2><br />
             <table>
                 <tr>
@@ -103,6 +103,7 @@
                     </td>
                 </tr>
         </div>
+
         <div style="flex: 1; padding: 10px;">
             <h1>Syntax and Coding examples:</h1>
             <h2>Input methods in C:</h2>
@@ -110,6 +111,8 @@
             <md-block>
                 ```c
                 #include &ltstdio.h&gt;
+                int t;
+                scanf("%d",&t);
                 ```
             </md-block>
         </div>
