--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -25,7 +25,7 @@
                         user messages, file writing, etc.</li>
                 </ul>
             </blockquote>
-            <br/>
+            <br />
             <h2>Input methods in C:</h2><br />
             <table>
                 <tr>
@@ -110,7 +110,7 @@
             <h3>scanf:</h3>
             <md-block>
                 ```c
-                #include &ltstdio.h&gt;
+                #include &lt;stdio.h&gt;
                 int t;
                 scanf("%d",&t);
                 ```
