--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div style="display: flex;">
-        <div style="flex: 1; padding: 10px;">
+    <div>
+        <div>
             <h1>Input and Output</h1>
             <blockquote>
                 <ul>
@@ -104,7 +104,7 @@
                 </tr>
         </div>
 
-        <div style="flex: 1; padding: 10px;">
+        <aside>
             <h1>Syntax and Coding examples:</h1>
             <h2>Input methods in C:</h2>
             <h3>scanf:</h3>
@@ -115,7 +115,7 @@
                 scanf("%d",&t);
                 ```
             </md-block>
-        </div>
+        </aside>
     </div>
 
 </body>
