--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div>
+    <aside>
         <h1>Input and Output</h1>
         <blockquote>
             <ul>
@@ -101,7 +101,7 @@
                     <p>Displays strings, is terminated by Enter key. </p>
                 </td>
             </tr>
-    </div>
+    </aside>
 
     <aside>
         <h1>Syntax and Coding examples:</h1>
