--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -103,7 +103,7 @@
             </tr>
     </aside>
 
-    <aside>
+    <div>
         <h1>Syntax and Coding examples:</h1>
         <h2>Input methods in C:</h2>
         <h3>scanf:</h3>
@@ -114,7 +114,7 @@
             scanf("%d",&t);
             ```
         </md-block>
-    </aside>
+    </div>
 
 </body>
 
