--- a/HTML/inout.html
+++ b/HTML/inout.html
@@ -126,6 +126,15 @@
                     ```
                 </md-block>
 
+                <h3>getchar:</h3>
+                <md-block>
+                    ```c
+                    #include &lt;stdio.h&gt;
+                    char t;
+                    t = getchar();
+                    ```
+                </md-block>
+
             </div>
         </div>
 
